[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/controller_icons/assets/key/ctrl.png" type="Texture" id=1]
[ext_resource path="res://addons/controller_icons/objects/TextureRect.gd" type="Script" id=2]
[ext_resource path="res://scenes/game_box/GameBoxImage.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/more_info.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/play.svg" type="Texture" id=5]
[ext_resource path="res://addons/controller_icons/assets/key/enter_alt.png" type="Texture" id=6]

[node name="GameBoxImage" type="Button"]
anchor_right = 0.2
anchor_bottom = 0.25
rect_min_size = Vector2( 205, 150 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -2

[node name="Media" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 205.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 7

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 205.0
margin_bottom = 108.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 205.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 157.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Sample Text"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="MoreInfo" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 205.0
margin_bottom = 44.0
rect_min_size = Vector2( 44, 44 )
focus_mode = 0
icon = ExtResource( 4 )

[node name="MoreInfoRoot" type="Control" parent="VBoxContainer/HBoxContainer/MoreInfo"]
unique_name_in_owner = true
visible = false
margin_left = -20.0
margin_top = -18.0
margin_right = 10.0
margin_bottom = 12.0
__meta__ = {
"_edit_group_": true
}

[node name="MoreInfoIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/MoreInfo/MoreInfoRoot"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
path = "rh_major_option"
max_width = 30

[node name="PlayContainer" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -66.0
margin_bottom = 33.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.360784 )

[node name="ControllerTextureRect" type="TextureRect" parent="PlayContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -62.0
margin_right = -32.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true
script = ExtResource( 2 )
path = "rh_accept"
max_width = 30

[node name="Play" type="TextureRect" parent="PlayContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[connection signal="focus_entered" from="." to="." method="_on_GameBoxImage_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_GameBoxImage_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_GameBoxImage_pressed"]
[connection signal="visibility_changed" from="." to="." method="_on_GameBoxImage_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MoreInfo" to="." method="_on_MoreInfo_pressed"]
